20070410
	fix some porting errors in /appl/cmd/look.b
	document look's -r option in look(1)
20070407
	/os/port/^(portdat.h lib.h portfns.h xalloc.c) compatiblity changes with plan 9
	/os/pc ether drivers updated to match plan 9, and os/ip (and a few files in /os/port) also updated, including removing some unreachable code
	/os/ip/tcp.c changes from plan 9 for out-of-sequence segments
20070319
	emu/port/devsrv.c and os/port/devsrv.c delete wc at correct time
20070312
	rename -D and -k options to plumb (old ones still accepted); add -i option to take data from standard input; update man page
	enable 64-bit seeks in /emu/Nt/devfs.c
20070302
	change /mkfile to build yacc earlier, mainly to make bootstrap of a new host easier (makemk.sh and mk install)
	change /utils/mkfile not to build k[acl] and q[acl] on Plan 9, since the system ones are the same
20070228
	make array bounds checking the default for on-the-fly compilers (emu/port/main.c)
	improve wording in security-ssl(2) and ssl(3)
20070227
	/include/fcall.h: ensure unsigned promotion to counter ansi sign-extending rules for GBIT64
	/libmemdraw/draw.c: copy fix to memfillcolor
20070220
	add 0x92 as chip ID for ether91c111.c
20070217
	repair /appl/lib/libc.b and /appl/lib/libc0.b strncmp implementations (used only by c2l output) [inferno-os issue 9]
	/emu/port/devip.c, get socket fd on reopen of ctl
	/appl/acme/exec.b, trim string correctly [inferno-os issue 11]
20070216
	add /module/lists.m, /appl/lib/lists.b, and lists(2)
20070209
	remove debugging -d option to exportfs call in emu/Plan9/devsrv9.c(!)
20070206
	/appl/svc/auth.sh: replace exit by raise
	/man/2/styxservers: document replychan and replydirect
20070201
	update US timezone files to save energy
20070131
	add /appl/lib/convcs/utf16_btos.b, utf16_stob.b etc [rog]
20070130
	fix wording in some of the licence files (eg, remove references to old liberal licence)
20070123
	check lengths properly in devenv.c